# backend_tramplin

./: .env.test  .example.env  .gitignore  .pip-audit-ignore  .pre-commit-config.yaml  ARCHITECTURE.md  Makefile  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml  t.txt
.github/workflows/: ci.yml
app/: main.py
docker/: app.Dockerfile
docs/adr/: 001-initial-architecture.md
migrations/: env.py
migrations/versions/: 083f5858907a_init.py  392b24e2b4e4_initial_migration.py  41aa86a76f51_new_tables.py  a1b2c3d4e5f6_add_inn_dadata_fields.py
scripts/: run_tests.sh  start.sh
src/: main.py
src/api/: deps.py
src/api/v1/: __init__.py  deps.py
src/api/v1/endpoints/: applicants.py  applications.py  auth.py  companies.py  events.py  favorites.py  glossary.py  opportunities.py  recommendations.py  uploads.py  users.py
src/core/: config.py  exceptions.py  init_data.py  logging_config.py  security.py
src/db/: base.py  session.py
src/middleware/: logging.py
src/models/: __init__.py  application.py  company.py  enums.py  messaging.py  notification.py  opportunity.py  seed_data.py  skill.py  social.py  user.py
src/repositories/: applicant.py  application.py  base.py  company.py  event.py  favorites.py  glossary.py  opportunity.py  recommendation.py  user.py
src/schemas/: application.py  company.py  event.py  favorites.py  glossary.py  opportunity.py  recommendation.py  upload.py  user.py
src/services/: applicant.py  application.py  auth.py  company.py  dadata.py  event.py  favorites.py  glossary.py  ip_geo.py  opportunity.py  recommendation.py  storage.py  upload.py  user.py
src/utils/: cache.py  rate_limiter.py
tests/: conftest.py
tests/integration/: test_applications.py  test_auth.py  test_companies.py  test_favorites_applicants.py  test_new_features.py  test_opportunities.py  test_users.py
